[workspace]
resolver = "2"
members = [
    "marauder",
    "scrolls",
    "srv",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/fenollp/reMarkable-tools"
authors = [
    "Pierre Fenoll <pierrefenoll@gmail.com>",
]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
atomic = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
crc-any = { version = "2", default-features = false, features = ["heapless"] }
env_logger = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
itertools = "0.12"
log = "0.4"
nom = "5"
once_cell = "1"
prost = "0.12"
protoc-bin-vendored = "3"
qrcode-generator = "4"
quick-xml = { version = "0.22", features = ["serialize"] }
rand = "0.8"
ringbuffer = "0.15"
serde = { version = "1", features = ["derive"] }
serde-jsonlines = { version = "0.5", features = ["async"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = "0.11"
tonic-build = "0.11"
tower = "0.4"
uuid = { version = "1", features = ["v4"] }

[workspace.dependencies.libremarkable]
# version = "0.6"
git = "https://github.com/canselcik/libremarkable"
branch = "master"
default-features = false
features = [
    "appctx",
    "battery",
    "framebuffer",
    "framebuffer-drawing",
    "framebuffer-storage",
    "framebuffer-text-drawing",
    "framebuffer-types",
    "image",
    "input",
    "input-types",
    "scan",
]
