[package]
name = "marauder"
description = "Hacking on Magic Paper & making computation palpable"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
atomic.workspace = true
chrono.workspace = true
clap.workspace = true
crc-any.workspace = true
drawings.path = "../drawings"
env_logger.workspace = true
itertools.workspace = true
libremarkable.workspace = true
log.workspace = true
nom.workspace = true
once_cell.workspace = true
pb.path = "../pb"
prost.workspace = true
qrcode-generator.workspace = true
quick-xml.workspace = true
rand.workspace = true
serde.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
uuid.workspace = true
