[package]
name = "pb"
description = "Protocol Buffers for HyperCards"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
