[package]
name = "scrolls"
description = "Replay scribbles, drawings, doodles, convos..."
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
drawings.path = "../drawings"
env_logger.workspace = true
libremarkable.workspace = true
log.workspace = true
pb.path = "../pb"
ringbuffer.workspace = true
serde-jsonlines.workspace = true
serde.workspace = true
tokio.workspace = true

# TODO: filter out + move to workspace
# lyon_geom = "1"
quick-xml = "0.23"
svg-path-parser = "0.1.1"
svgtypes = "0.11"
# thiserror = "1"
usvg = "0.35"
svg2polylines = "0.8"
vsvg = "0.4"
